# code_encoding_and_decode

./: README.md
UCS2/: CMakeLists.txt  Readme  assert_coding.c  assert_coding.h  assert_coding_v2.cpp  log_level.h  main.c  myiconv.c  myiconv.h  ucs2_decode.c  ucs2_encoding.c  win_unucs2.c
UCS2_v1/: Makefile  Readme
UCS2_v1/include/: assert_coding.h  myiconv.h
UCS2_v1/src/: assert_coding.c  assert_coding.cpp
UCS2_v2/: CMakeLists.txt  Readme  at_stk.txt
UCS2_v2/mysrc/: CMakeLists.txt
UCS2_v2/mysrc/include/: log_level.h
UCS2_v2/mysrc/src/: main.c
